--- a/new code/style.css
+++ b/new code/style.css
@@ -120,6 +120,7 @@ header ul li a:hover {
   background: #ea1538;
   color: white;
   font-weight: bold;
+  margin-top: 17px;
 }
 
 .read-more:hover {
@@ -127,7 +128,9 @@ header ul li a:hover {
 }
 
 .main-news h1 {
-  font-size: 30px;
+  font-size: 40px;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
 
 /* generic articles */
