--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,132 @@
+/*my colors: 
+
+orange: #F78409;
+röd: #F94204;
+rosa: #FF5C8A;
+blå: #69C1DF;
+rosa2: #FF7AA0;
+*/
+
 html {
-  background: #0025ff;
+  background: #78c0a8;
   color: #fff;
 }
+
+.wrapper {
+  border: 2px solid black;
+  width: 667px;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+}
+.top text{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+}
+
+.top h1{
+  color:gray;
+}
+
+.top h2{
+  font-size: small;
+}
+
+.top{
+  background-color:#FF5C8A;
+  grid-column: span 2;
+}
+
+.top button{
+  background-color: #F94204; /* same as background */
+  border: none;
+  color: white;
+  padding: 2px 2px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+    
+  margin: 2px;
+  width: 50px;
+  height: 40px;
+}
+
+.top input {
+  margin: 2px 10px;
+  width: 70px;
+  height: 20px;
+}
+.navbar {
+  grid-column: span 4;
+  background-color:#F94204;
+  display: flex;
+  align-items: end;
+}
+
+
+.big-news-section{
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+border: 2px solid green;
+height: 500px;
+width: 667px;
+display: flex;
+align-items: center;
+justify-content: space-around;
+
+}
+
+.big-news{
+  margin: 5px;
+  height: 100px;
+  width: 200px;
+
+}
+
+.first{
+  background: #F78409;
+}
+
+.second{
+  background: #F94204;
+}
+
+.third{
+  background: #FF5C8A;
+}
+
+.fourth{
+  background: #69C1DF;
+
+}
+
+.tiny-news-wrapper{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: 2px solid blue;
+  height: 500px;
+  width: 667px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+
+.tiny-news-info{
+  background: #78c0a8;
+}
+
+
+.tiny-news-info p{
+  margin-top: 10px;
+  margin-bottom: 30px;
+  color:#F78409;
+  background: black;
+}
+
+
+.tiny-news{
+  margin: 5px;
+  height: 100px;
+  width: 200px;
+  background: greenyellow;
+}
+
+
