final style changes

--- a/style1.css
+++ b/style1.css
@@ -324,7 +324,7 @@ p {
     
     .box-two-text {
         width: auto;
-        height: 30%;
+        height: auto;
         margin: auto;
         display: flex;
         flex-direction: column;
@@ -475,7 +475,6 @@ p {
     }
     
     .box-two-text {
-        height: 35%;
         width: fit-content;
         padding: 10px;
         margin: auto;
