--- a/code/style.css
+++ b/code/style.css
@@ -22,6 +22,9 @@ align-items: flex-end;
 
 .logo-sitename img{
   height: 68px;
+  background-color: #f57272;
+  padding: 10px;
+  border-radius: 60px;
 }
   h1 {
       font-style: italic;
@@ -202,6 +205,9 @@ h3 {
       
       .logo-sitename img{
         height: 68px;
+        background-color: #f57272;
+        padding: 10px;
+        border-radius: 60px;
       }
 
    h1 {
@@ -339,6 +345,9 @@ h3 {
         
         .logo img{
           height: 100px;
+          background-color: #f57272;
+          padding: 10px;
+          border-radius: 60px;
         }
   
    h1 {
