--- a/code/style.css
+++ b/code/style.css
@@ -12,16 +12,18 @@ html {
   color: #fff;
 }
 
+
 .wrapper {
-  border: 2px solid black;
-  width: 667px;
+  border: none;
+  width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
 }
-.top text{
+.text h1{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 30px;
+  font-size: 40px;
+  display:none;
 }
 
 .top h1{
@@ -38,95 +40,232 @@ html {
 }
 
 .top button{
-  background-color: #F94204; /* same as background */
+  background-color:#F94204; /* same as background */
   border: none;
   color: white;
   padding: 2px 2px;
   text-decoration: none;
   display: inline-block;
   font-size: 10px;
-    
   margin: 2px;
   width: 50px;
   height: 40px;
+  transition-duration: 0.4s;
+ 
 }
+  .top button:hover {
+    background-color:#69C1DF; /* Green */
+    color: white;
+  }
+
+  .navbar img{
+    max-width: 30px;
+    max-height: 30px;
+    
+  }
 
 .top input {
   margin: 2px 10px;
   width: 70px;
   height: 20px;
+  display:none;
 }
 .navbar {
   grid-column: span 4;
-  background-color:#F94204;
+  background-color:#FF5C8A;
   display: flex;
+  justify-content: right;
   align-items: end;
+}
+
+.navbar h2{
+  display:none;
 }
 
 
 .big-news-section{
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 border: 2px solid green;
-height: 500px;
-width: 667px;
+width: auto;
+height: auto;
 display: flex;
+flex-direction: column;
 align-items: center;
-justify-content: space-around;
 
 }
+
 
 .big-news{
   margin: 5px;
-  height: 100px;
-  width: 200px;
+  min-height: 300px;
+  min-width: 300px;
+  max-width: auto;
+  min-width: auto;
 
 }
 
-.first{
-  background: #F78409;
+.big-news img{
+  max-width:100%;
+  max-height:100%;
+  }
+  
+.news-pic{
+  background:#69C1DF;
 }
 
-.second{
+.news-text{
   background: #F94204;
 }
 
-.third{
-  background: #FF5C8A;
-}
 
-.fourth{
-  background: #69C1DF;
 
-}
+/*Styling for tiny news*/
 
 .tiny-news-wrapper{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border: 2px solid blue;
-  height: 500px;
-  width: 667px;
   display: flex;
+  flex-direction: column;
   align-items: start;
-  justify-content: center;
 }
 
-.tiny-news-info{
+/* .tiny-news-info{
   background: #78c0a8;
-}
+} */
 
 
-.tiny-news-info p{
+/* .tiny-news-info p{
   margin-top: 10px;
   margin-bottom: 30px;
   color:#F78409;
   background: black;
-}
+} */
 
 
 .tiny-news{
   margin: 5px;
-  height: 100px;
-  width: 200px;
-  background: greenyellow;
+  height: 250px;
+  width: 400px;
+  background: rgba(178, 195, 148, 0.697);
+  border: solid rgb(170, 36, 36);
 }
 
 
+/*responsiveness Tablets*/
+@media (min-width: 667px) and (max-width: 1024px) {
+  .text h1{
+    
+    font-size: 30px;
+    display:grid;
+    color:#F78409;
+  }
+
+  .big-news-section{
+
+    flex-direction: row;
+    background:#F78409;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .big-news{
+  width: 310px;
+  min-height: 300px;
+
+
+  }
+
+.tiny-news-wrapper{
+  display: flex;
+  flex-direction: row;
+  padding: 2px;
+  column-gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+  
+.tiny-news{
+  /*max-width: 300px;*/
+  max-width: 40%;
+  margin: 2px;
+}
+}
+
+
+
+
+
+/*Responsivness Desktop*/
+@media (min-width:1025px){
+  .text h1{
+    font-size: 35px;
+    display:grid;
+    color:#F78409;
+  }
+
+
+.big-news-section{
+  flex-direction: row;
+  background-color: white;
+  justify-content: center;
+  min-width: 1025px;
+
+}
+
+.big-news{
+  min-width: 250px;
+  min-height: 350px;
+  max-width: 500px;
+  max-height: 500px;
+}
+
+.navbar{
+min-width: 1025px;
+max-width: auto;
+justify-content: right;
+align-items: flex-end;
+grid-column: span 8;
+background-color: #F94204;
+}
+
+
+.image{
+  grid-column: span 1;
+}
+
+
+.text{
+grid-column: span 7;
+
+}
+
+.top input{
+display: flex;
+min-width: 300px;
+}
+
+.navbar h2{
+  display:inline;
+}
+
+.navbar-search button{
+  display:none;
+}
+
+
+.tiny-news-wrapper{
+  display: flex;
+  flex-direction: row;
+  padding: 2px;
+  column-gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+  
+.tiny-news{
+  max-width: 20%;
+  margin: 2px;
+}
+}
