Comment  out unused code

--- a/code/style.css
+++ b/code/style.css
@@ -28,16 +28,17 @@ body {
 
 /* - - - Article grid - - - */
 
+/* 
 .article-grid {
   display: grid;
   grid-template-columns: 1fr;
   border: dotted black;
   grid-gap: 10px;
-}
+} */
 
 /* - - - Article card - - - */
 
-.article {
+/* .article {
   padding: 10px;
 }
 
@@ -47,30 +48,30 @@ body {
 
 .article-title h1 {
   color:green;
-}
+} */
 
 
 /* - - - Feature article - - - */
 
-.article--featured {
+/* .article--featured {
   background: lightblue;
   max-width: 100%;
 }
 
 .article--featured img {
   width: 100%;
-}
+} */
 
 
 /* - - - Regular articles - - - */
 
-.article--regular {
+/* .article--regular {
   background: orange;
 }
 
 .article--regular img {
   width: 100%;
-}
+} */
 
 
 /* - - - Mobile media queries - - - */
