--- a/code/style.css
+++ b/code/style.css
@@ -57,7 +57,7 @@ body {
 } */
 
 
-/* - - - Feature article - - - */
+/* - - - Featured article - - - */
 
 /* .article--featured {
   background: lightblue;
